bug: liquibase configuration fix + swagger start